# Year3_Project

./: .gitignore  Blockchain in Rust.pptx  README.md  Report  Report.md  developers-diary.md  project-plan.md
BlockChain/: Cargo.toml  Dockerfile  about.md  settings_file.txt
BlockChain/api/: Cargo.toml  about.md
BlockChain/app/: Cargo.toml  about.md
BlockChain/app/src/: config.rs  error.rs  lib.rs  main.rs
BlockChain/block_chain/: Cargo.toml  about.md
BlockChain/block_chain/src/: block.rs  block_header.rs  db.rs  hashable.rs  lib.rs  message.rs  transaction.rs
BlockChain/controller/: Cargo.toml  about.md
BlockChain/controller/src/: lib.rs
BlockChain/miner/: Cargo.toml  about.md
BlockChain/miner/src/: lib.rs  main.rs
BlockChain/node/: Cargo.toml  about.md
BlockChain/node/src/: lib.rs  main.rs
Learning/: rust-about.md
Learning/freestartupkits-blockchin/src/: main.rs  rusty_chain.rs
Learning/learning-rust/: Cargo.toml
Learning/minigrep/: Cargo.toml
Learning/minigrep/src/: lib.rs  main.rs
Learning/multiple_binaries/: Cargo.toml
Learning/peer_to_peer/client/: Cargo.toml
Learning/peer_to_peer/network/: Cargo.toml
Learning/peer_to_peer/node/: Cargo.toml
Learning/peer_to_peer/server/: Cargo.toml
Learning/robo_script_1/: Cargo.toml
Learning/robo_script_1/src/: lib.rs  main.rs
Learning/robo_script_2/: Cargo.toml
Learning/robo_script_2/src/: lib.rs  q1.rs  tracker.rs
Learning/rust-chain/: Cargo.toml
Learning/toy-chain/: Cargo.toml
Learning/using-serde/: Cargo.toml
Leraning/: rust-about.md
Leraning/freestartupkits-blockchin/: Cargo.toml
UI/bma/: README.md  package-lock.json  package.json
block_chain/: Cargo.toml  about.md
block_chain/src/: main.rs
(+34 files in other folders)
