[package]
name = "app"
version = "0.1.0"
authors = ["Mindaugas Sharskus <g00339629@gmit.ie>"]
edition = "2018"

[dependencies]
sha2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
block_chain = { path = "../block_chain" }
miner = { path = "../miner" }
node = { path = "../node" }
