[package]
name = "app"
version = "0.1.0"
authors = ["Mindaugas Sharskus <g00339629@gmit.ie>"]
edition = "2018"

[dependencies]
# hashing
sha2 = "0.8"
# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1.0"
# api
rocket = { version = "0.4.0", default-features = false }
reqwest = "0.9"
# blockchain
block_chain = { path = "../block_chain" }
miner = { path = "../miner" }
node = { path = "../node" }

[dependencies.rocket_contrib]
default-features = false
features = ["json"]