[package]
name = "block_chain"
version = "0.1.0"
authors = ["Mindaugas Sarskus <my>", "Bernard Wong <BernardWong97>"]
edition = "2018"

[dependencies]
sha2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.3"
uuid = { version = "0.7", features = ["v4", "serde"] }
